# cs240-w4-algorithms

./: Cargo.toml  README.md  shell.nix
.github/workflows/: test.yml
pseudocode/: merge_sort  quick_sort
src/: main.rs  merge_sort.rs  quick_sort.rs
