[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
tailcall = "1.0.1"

# Optional performance improvements
# [profile.release]
# codegen-units = 1
# lto = "fat"
